--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="intro-text">
             <h1>Kenneth Smith</h1>
-            <p>Full Stack Developer | Java | JavaScript | Python</p>
+            <p>Software Engineer</p>
             <p>Bringing digital ideas to life with a focus on seamless user experiences and cutting-edge technology.</p>
         </div>
     </section>
