updating about me section

--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
     <!-- About Me Section -->
     <section class="solutions" id="about">
         <h2>About Me</h2>
-        <p>I am Kenneth Smith, a Full Stack Developer specializing in creating dynamic and responsive web applications. With expertise in both front-end and back-end technologies, I develop solutions that are not only visually appealing but also robust and scalable.</p>
-        <p>Technologies I use include Java, JavaScript, HTML, CSS, Python, and MySQL.</p>
+        <p>
+            I’m a results-driven Full Stack Developer with experience building responsive, secure,
+             and scalable web applications. With skills across Java, JavaScript, HTML, CSS, 
+             Python, and MySQL, I handle everything from front-end UI development to back-end
+             architecture. I focus on writing clean, maintainable code and creating products 
+             that deliver real value to users and teams.
+        </p>
+
     </section>
 
    <!-- Contact Section -->
@@ -60,9 +66,10 @@
 
 <script>
   document.getElementById('emailBtn').addEventListener('click', function () {
-    window.location.href = 'mailto:kennesmith50@gmail.com';
+    window.location.href = 'mailto:kennesmith50@gmail.com?subject=Portfolio Inquiry&body=Hi Kenneth,';
   });
 </script>
+
 
 </body>
 </html>
