--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kenneth Smith - Full Stack Developer Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,11 +48,11 @@
     <section class="solutions" id="about">
         <h2>About Me</h2>
         <p>
-            I’m a results-driven Full Stack Developer with experience building responsive, secure,
-             and scalable web applications. With skills across Java, JavaScript, HTML, CSS, 
-             Python, and MySQL, I handle everything from front-end UI development to back-end
-             architecture. I focus on writing clean, maintainable code and creating products 
-             that deliver real value to users and teams.
+            I'm a focused Software Engineer with experience building responsive, secure,
+            and scalable web applications. With skills across Java, JavaScript, HTML, CSS, 
+            Python, and MySQL, I handle everything from front-end UI development to back-end
+            architecture. I focus on writing clean, maintainable code and creating products 
+            that deliver real value to users and teams.
         </p>
 
     </section>
