--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h2>About Me</h2>
         <p>
             I'm a focused Software Engineer with experience building responsive, secure,
-            and scalable web applications. With skills across Java, JavaScript, HTML, CSS, 
+            and scalable web applications. With skills across Java, JavaScript, Go, 
             Python, and MySQL, I handle everything from front-end UI development to back-end
             architecture. I focus on writing clean, maintainable code and creating products 
             that deliver real value to users and teams.
